--- a/cooperacion-web/pom.xml
+++ b/cooperacion-web/pom.xml
@@ -132,6 +132,11 @@
             <version>2.0.12</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.16</version>
+        </dependency>
     </dependencies>
     
     <repositories>
