cambio en obtener carpeta de archivos

--- a/cooperacion-web/src/main/resources/bundle.properties
+++ b/cooperacion-web/src/main/resources/bundle.properties
@@ -1,5 +1,6 @@
 #
-path_folder=/opt/soporte/cooperacion
+path_folder_win=C:\\Users\\G3\\archivos\\cooperacion
+path_folder_linux=/opt/soporte/cooperacion
 
 #cuenta remitente
 remitente_correo=cooperacion@admin.mined.edu.sv
