--- a/cooperacion-web/src/main/webapp/WEB-INF/web.xml
+++ b/cooperacion-web/src/main/webapp/WEB-INF/web.xml
@@ -87,6 +87,21 @@
     </filter-mapping>
     
     <servlet>
+        <servlet-name>FileUploadServlet</servlet-name>
+        <servlet-class>sv.gob.mined.utils.servlet.FileUploadServlet</servlet-class>
+        <multipart-config>
+            <location>/tmp</location>
+            <max-file-size>20848820</max-file-size>
+            <max-request-size>418018841</max-request-size>
+            <file-size-threshold>20485760</file-size-threshold>
+        </multipart-config>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>FileUploadServlet</servlet-name>
+        <url-pattern>/FileUploadServlet</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
     </servlet>
