--- a/cooperacion-web/src/main/resources/bundle.properties
+++ b/cooperacion-web/src/main/resources/bundle.properties
@@ -3,7 +3,7 @@ versionLong=${version}.${buildNumber}.${buildDate}
 ambiente=Desarrollo
 
 #
-path_folder_win=C:\\Users\\G3\\archivos\\cooperacion
+path_folder_win=C:\\Users\\Desarrollo\\archivos\\cooperacion
 path_folder_linux=/opt/soporte/cooperacion
 
 #cuenta remitente
