--- a/cooperacion-web/src/main/resources/bundle.properties
+++ b/cooperacion-web/src/main/resources/bundle.properties
@@ -8,12 +8,14 @@ path_folder_linux=/opt/soporte/cooperacion
 
 #cuenta remitente
 remitente_correo=cooperacion@admin.mined.edu.sv
-remitente_password=mined2021.*
+remitente_password=c00p3r4c10n+*/
 
 #formato correos
 correo.respuesta.titulo=MINEDUCYT - Registro de proyecto
 correo.respuestaAprobacionVoBo.mensaje=San Salvador, fecha {0}<br/><br/>Nombre del Director: {1}<br/>Nombre del C.E.: {2}<br/>C\u00f3digo de Infraestructura: {3}<br/>Estimado Director/a<br/><br/>Reciba un cordial saludo, nos es grato informarle que el proyecto: {4}, cuyo objetivo describe: {5}, ha sido remitido a la unidad correspondiente para su validaci\u00f3n y visto bueno. En un per\u00edodo de 10 d\u00edas h\u00e1biles se le har\u00e1 llegar su resoluci\u00f3n.<br/><br/>Atentamente,<br/><br/>Direcci\u00f3n de Planificaci\u00f3n
-correo.respuestaAprobacionAutomatica.mensaje=San Salvador, fecha {0}<br/><br/>Director/a:<br/>{1}<br/>{2}<br/>C\u00f3digo: {3}<br/><br/>Estimado Director/a<br/><br/>Reciba un cordial saludo, nos es grato informarle que el proyecto: {4}, cuyo objetivo describe: {5}, ha sido aprobado por lo que puede proceder con la ejecuci\u00f3n.<br/><br/>Atentamente,<br/><br/>Direcci\u00f3n de Planificaci\u00f3n
+correo.respuestaAprobacionAutomatica.mensaje=San Salvador, fecha {0}<br/><br/>Director/a:<br/>{1}<br/>{2}<br/>C\u00f3digo: {3}<br/><br/>Estimado Director/a<br/><br/>Reciba un cordial saludo, nos es grato informarle que el proyecto: {4}, cuyo objetivo describe: {5}, ha sido DENEGADO por {6}.<br/><br/>Si necesita mayor informaci\u00f3n, responder a este correo.<br/><br/>Atentamente,<br/><br/>Direcci\u00f3n de {7}
+
+correo.respuesaDenegacion=San Salvador, fecha {0}<br/><br/>Director/a:<br/>{1}<br/>{2}<br/>C\u00f3digo: {3}<br/><br/>Estimado Director/a<br/><br/>Reciba un cordial saludo, por este medio le informamos que el proyecto: {4}, cuyo objetivo describe: {5}, ha sido aprobado por lo que puede proceder con la ejecuci\u00f3n.<br/><br/>Atentamente,<br/><br/>Direcci\u00f3n de Planificaci\u00f3n
 
 correo.respuestaProyectoObservado.mensaje=San Salvador, fecha {0}<br/><br/>Nombre del Director: {1}<br/>Nombre del C.E.: {2}<br/>C\u00f3digo de Infraestructura: {3}<br/>Estimado Director/a<br/><br/>Reciba un cordial saludo, referencia al proyecto: {4}, cuyo objetivo describe: {5} ha sido observado con el siguiente comentario: {6}
 
