--- a/paquescolar-web/pom.xml
+++ b/paquescolar-web/pom.xml
@@ -22,6 +22,11 @@
             <version>2.1</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
