--- a/paquescolar-ejb/pom.xml
+++ b/paquescolar-ejb/pom.xml
@@ -21,6 +21,11 @@
             <version>2.0</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>6.0</version>
