--- a/paquescolar-web/src/main/resources/Bundle.properties
+++ b/paquescolar-web/src/main/resources/Bundle.properties
@@ -1,9 +1,9 @@
 #PATH
 path_images_linux=/opt/soporte/paquete/fotoProveedores/
-path_images_win=C:\\Users\\G3\\Documents\\paquete\\fotoProveedores\\
+path_images_win=C:\\Users\\DesarrolloPc\\Documents\\paquete\\fotoProveedores\\
 path_reportes_linux=/opt/soporte/paquete/archivos/reportes/
 path_reportes_linux2=/media/misanchez/Datos/git_paquete/paquete/paquescolar-rpt/src/main/java/
-path_reportes_win=C:\\Users\\G3\\Documents\\NetBeansProjects\\paquete\\paquescolar-rpt\\src\\main\\java\\
+path_reportes_win=C:\\Users\\DesarrolloPc\\Documents\\NetBeansProjects\\paquete\\paquescolar-rpt\\src\\main\\java\\
 
 
 #Parametros extra de contratos
