--- a/paquescolar-web/src/main/resources/Bundle.properties
+++ b/paquescolar-web/src/main/resources/Bundle.properties
@@ -62,6 +62,7 @@ pagoprov.email.tablaDetalle.header  =<table border='1' style='border-collapse: c
 pagoprov.email.tablaDetalle.detalle =<tr><td style='text-align:center;'>{0}</td><td>{1}</td><td>{2}</td><td>{3}</td><td style='text-align:right;'>{4}</td></tr>
 pagoprov.email.tablaDetalle.footer  =<tr><td style='text-align:right;' colspan='4'>Total a pagar ($ USD)</td><td style='text-align:right;'>{0}</td></tr>
 pagoprov.email.tablaDetalle.fin     =</table><br/><br/>
+pagoprov.email.montoPagar           =Monto a Pagar: $ {0}<br/><br/>
 pagoprov.email.finNotificacion      =<span style='font-size:13px;'>Fecha: {0},<br/><br/>Atte.<br/><br/>Pagadur\u00eda Auxiliar.<br/>Direcci\u00f3n Departamental de Educaci\u00f3n de {1}.</span><br/><br/><hr/><span style='font-size:11px;'>Este es un mensaje autom\u00e1tico. No responda al remitente.<br/>Ministerio de Educaci\u00f3n.</span>
 
 
