--- a/paquescolar-web/pom.xml
+++ b/paquescolar-web/pom.xml
@@ -73,15 +73,16 @@
             <version>5.0.0</version>
         </dependency>
         <dependency>
-            <groupId>com.lowagie</groupId>
-            <artifactId>itext</artifactId>
-            <version>2.1.7</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>3.0.11</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
